--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "5.0.0",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.5",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
